log
Fri 10 Mar 2023 06:21:55 PM UTC: 
 tests:  0|7
total_score: 0/70
5f6ab1a
Tue 14 Mar 2023 10:09:33 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
98a4373
Tue 14 Mar 2023 11:16:08 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
a8d8412
Tue 14 Mar 2023 11:20:15 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:59:11: error: ‘p’ is a pointer; did you mean to use ‘->’?
   59 |   strcpy(p.nombre, nombre);
      |           ^
      |           ->
exercises.c:60:11: error: ‘p’ is a pointer; did you mean to use ‘->’?
   60 |   strcpy(p.rut, rut);
      |           ^
      |           ->
exercises.c:61:4: error: ‘p’ is a pointer; did you mean to use ‘->’?
   61 |   p.edad = edad;
      |    ^
      |    ->
Compilation failed
941f04c
Tue 14 Mar 2023 11:20:31 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:61:4: error: ‘Persona’ has no member named ‘edadedad’
   61 |   p->edadedad = edad;
      |    ^~
Compilation failed
7e24eb1
Tue 14 Mar 2023 11:20:38 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
0f0595d
Tue 14 Mar 2023 11:24:24 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:81:17: error: expected expression before ‘Vector’
   81 |   ptrVector = (*Vector) calloc(n, sizeof(Vector));
      |                 ^~~~~~
exercises.c:81:24: error: expected ‘;’ before ‘calloc’
   81 |   ptrVector = (*Vector) calloc(n, sizeof(Vector));
      |                        ^~~~~~~
      |                        ;
Compilation failed
18ddacd
Tue 14 Mar 2023 11:25:14 PM UTC: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:81:17: error: expected expression before ‘Vector’
   81 |   ptrVector = (*Vector) calloc(n, sizeof(Vector));
      |                 ^~~~~~
exercises.c:81:24: error: expected ‘;’ before ‘calloc’
   81 |   ptrVector = (*Vector) calloc(n, sizeof(Vector));
      |                        ^~~~~~~
      |                        ;
exercises.c:82:7: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   82 |   if (ptrVector = NULL)
      |       ^~~~~~~~~
exercises.c:83:11: error: returning ‘int’ from a function with return type ‘Vector *’ makes pointer from integer without a cast [-Werror=int-conversion]
   83 |     return(EXIT_FAILURE);
      |           ^
cc1: all warnings being treated as errors
Compilation failed
e8588a0
Tue 14 Mar 2023 11:25:28 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:81:17: error: expected expression before ‘Vector’
   81 |   ptrVector = (*Vector) calloc(n, sizeof(Vector));
      |                 ^~~~~~
exercises.c:81:24: error: expected ‘;’ before ‘calloc’
   81 |   ptrVector = (*Vector) calloc(n, sizeof(Vector));
      |                        ^~~~~~~
      |                        ;
exercises.c:83:11: error: returning ‘int’ from a function with return type ‘Vector *’ makes pointer from integer without a cast [-Werror=int-conversion]
   83 |     return(EXIT_FAILURE);
      |           ^
cc1: all warnings being treated as errors
Compilation failed
66cef8f
